Rust integration tests (#356)
* Integration tools for Rust wrapper

Add tools written in Rust which are usable by integration tests.

These are simply command-line utilities with a particular interface.
They are somewhat similar to the examples from docs/rust/examples
(keygen in particular) and may also serve as examples of Rust-Themis
usage. The tools are even added to Cargo.toml as examples so that they
are at least compile-checked during every build.

Writing these tools turned out to be quite useful exercise for the API.
For example, they have revealed that Rust-Themis API for Secure Cell is
a bit different from other language wrappers. Currently we do nothing
about it and just leave TODOs in the code. We'll improve the API later.

* Install Rust toolchain for integration tests

We're going to need Rust for integration tests so install it. We use
the same rustup.rs approach as for the main test suite. We also have
to install "clang" and "pkg-config" as they are dependencies of the
Rust-Themis build.

* Add Rust-Themis to integration tests

Well, this is a bit tricky... Currently the integration tests work only
for scripting languages like Python, or for Go which has extremely fast
compilation times and right tooling. Basically, the current setup runs
tests like this: "$interpreter tools/$language/$tool.$extension $args".
Rust tools can't support this without additional help.

To work around this we introduce a whole bunch of wrapper Shell scripts
which act as testing tools and then forward their arguments to actual
tool binaries. This way we don't have to break assumptions like that
every testing tool has a filename extension. (Also, note the quote
usage in the scripts. That's how it must be because some arguments may
contain spaces and empty strings.)

Rust is a compiled language and its compilation times are quite long.
Simply using "cargo run --example" for each tool adds about a second
to the startup time (for Cargo to 

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ bindings = { package = "libthemis-sys", path = "src/wrappers/themis/rust/libthem
 zeroize = "0.5.2"
 
 [dev-dependencies]
+base64 = "0.10.0"
 byteorder = "1.2.7"
 clap = "2.32"
 log = "0.4.6"
@@ -62,6 +63,26 @@ path = "docs/examples/rust/secure_message_client_verify.rs"
 [[example]]
 name = "secure_message_server"
 path = "docs/examples/rust/secure_message_server.rs"
+
+[[example]]
+name = "keygen_tool"
+path = "tools/rust/keygen_tool.rs"
+
+[[example]]
+name = "scell_context_string_echo"
+path = "tools/rust/scell_context_string_echo.rs"
+
+[[example]]
+name = "scell_seal_string_echo"
+path = "tools/rust/scell_seal_string_echo.rs"
+
+[[example]]
+name = "scell_token_string_echo"
+path = "tools/rust/scell_token_string_echo.rs"
+
+[[example]]
+name = "smessage_encryption"
+path = "tools/rust/smessage_encryption.rs"
 
 [[test]]
 name = "keys"
