--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,6 +1,7 @@
 # Default reviewer set
 *                   @vixentael @Lagovas
-
+/src/soter/              @vixentael @Lagovas @ilammy @storojs72 @secumod 
+/src/themis/             @vixentael @Lagovas @ilammy @storojs72 @secumod
 # Build system
 Makefile            @vixentael @Lagovas @shadinua
 *.mk                @vixentael @Lagovas @shadinua
