fixup! Automate C code formatting [4/4]
Initialize submodules to pull BoringSSL source code. For some reason
CircleCI does not do that for us.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,7 @@ jobs:
       # TODO: move package installation to Docker image
       - run: sudo apt-get update && sudo DEBIAN_FRONTEND=noninteractive apt-get -y install clang-format-7 clang-tidy-7
       - checkout
+      - run: git submodule update --init
       - run: make fmt_check ENGINE=boringssl
       - run: make fmt_check ENGINE=openssl
 
