--- a/tests/objcthemis/Podfile
+++ b/tests/objcthemis/Podfile
@@ -22,14 +22,21 @@ inhibit_all_warnings!
 target "objthemis" do
 
   # example should work with head
-  pod 'themis', :git => "https://github.com/cossacklabs/themis.git"
+  #pod 'themis', :git => "https://github.com/cossacklabs/themis.git"
+
+  # updated secure message API
+  pod 'themis', :git => "https://github.com/cossacklabs/themis.git", :branch => "vxtl/SM-ios"
 
 end
 
 target "objthemis_boring" do
 
   # example should work with head
-  pod 'themis/themis-boringssl', :git => "https://github.com/cossacklabs/themis.git"
+  #pod 'themis/themis-boringssl', :git => "https://github.com/cossacklabs/themis.git"
+
+
+  # updated secure message API
+  pod 'themis/themis-boringssl', :git => "https://github.com/cossacklabs/themis.git", :branch => "vxtl/SM-ios"
 
 end
 
