Use the latest compilers for analyzing the code
We need to set CC to the same compiler as used for formatting the code
in order for our "supported warning detector" to work accurately. Use
clang-7 that we use for formatting.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,8 @@ jobs:
     docker:
       - image: cossacklabs/build:ubuntu-bionic
     environment:
+      CC: clang-7
+      CXX: clang-7
       CLANG_FORMAT: clang-format-7
       CLANG_TIDY: clang-tidy-7
       WITH_FATAL_WARNINGS: yes
