--- a/docs/examples/swift/Podfile
+++ b/docs/examples/swift/Podfile
@@ -23,7 +23,7 @@ use_frameworks!
 
 target :"ThemisSwift" do
 
-  pod 'themis', '0.10.3'
+  pod 'themis', :podspec => "https://gist.githubusercontent.com/vixentael/ddd4b19dfd354b24ad7fcf022ffaff4b/raw/7a3fd60f3367640917c6aaec82e58318ac39d16d/themis.podspec"
 
 end
 
