Update NIST STS makefile
Improve readability, maintainability and output of NIST STS makefile:

- avoid hardcoding source code files
- avoid hardcoding header dependencies
- improve build status output
- provide default "all" target
- use standard variable names

--- a/tests/soter/nist-sts/makefile
+++ b/tests/soter/nist-sts/makefile
@@ -1,94 +1,51 @@
-CC = /usr/bin/gcc
-GCCFLAGS = -c -Wall
-ROOTDIR = .
-SRCDIR = $(ROOTDIR)/src
-OBJDIR = $(ROOTDIR)/obj
-VPATH  = src:obj:include
+#
+# Copyright (c) 2019 Cossack Labs Limited
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+# http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
 
-OBJ = $(OBJDIR)/assess.o $(OBJDIR)/frequency.o $(OBJDIR)/blockFrequency.o \
-      $(OBJDIR)/cusum.o $(OBJDIR)/runs.o $(OBJDIR)/longestRunOfOnes.o \
-      $(OBJDIR)/serial.o $(OBJDIR)/rank.o $(OBJDIR)/discreteFourierTransform.o \
-      $(OBJDIR)/nonOverlappingTemplateMatchings.o \
-      $(OBJDIR)/overlappingTemplateMatchings.o $(OBJDIR)/universal.o \
-      $(OBJDIR)/approximateEntropy.o $(OBJDIR)/randomExcursions.o \
-      $(OBJDIR)/randomExcursionsVariant.o $(OBJDIR)/linearComplexity.o \
-      $(OBJDIR)/dfft.o $(OBJDIR)/cephes.o $(OBJDIR)/matrix.o \
-      $(OBJDIR)/utilities.o $(OBJDIR)/generators.o $(OBJDIR)/genutils.o
+CC ?= /usr/bin/gcc
 
-assess: $(OBJ)
-	$(CC) -o $@ $(OBJ) -lm
+CFLAGS  += -Wall -Wno-unused-variable -Wno-unused-but-set-variable
+LDFLAGS += -lm
 
-$(OBJDIR)/assess.o: $(SRCDIR)/assess.c defs.h decls.h utilities.h
-	$(CC) -o $@ -c $(SRCDIR)/assess.c
+SRCDIR = src
+OBJDIR = obj
 
-$(OBJDIR)/frequency.o: $(SRCDIR)/frequency.c defs.h externs.h
-	$(CC) -o $@ $(GCCFLAGS) $(SRCDIR)/frequency.c
+TARGET = assess
 
-$(OBJDIR)/blockFrequency.o: $(SRCDIR)/blockFrequency.c defs.h externs.h
-	$(CC) -o $@ $(GCCFLAGS) $(SRCDIR)/blockFrequency.c
+SRC = $(wildcard $(SRCDIR)/*.c)
 
-$(OBJDIR)/cusum.o: $(SRCDIR)/cusum.c defs.h externs.h
-	$(CC) -o $@ $(GCCFLAGS) $(SRCDIR)/cusum.c
+OBJ = $(SRC:$(SRCDIR)/%.c=$(OBJDIR)/%.o)
+DEP = $(SRC:$(SRCDIR)/%.c=$(OBJDIR)/%.d)
 
-$(OBJDIR)/runs.o: $(SRCDIR)/runs.c defs.h externs.h
-	$(CC) -o $@ $(GCCFLAGS) $(SRCDIR)/runs.c
+all: $(TARGET)
 
-$(OBJDIR)/longestRunOfOnes.o: $(SRCDIR)/longestRunOfOnes.c defs.h externs.h
-	$(CC) -o $@ $(GCCFLAGS) $(SRCDIR)/longestRunOfOnes.c
+-include $(DEP)
 
-$(OBJDIR)/rank.o: $(SRCDIR)/rank.c defs.h externs.h matrix.h
-	$(CC) -o $@ $(GCCFLAGS) $(SRCDIR)/rank.c
+$(TARGET): $(OBJ)
+	@echo " LD $@"
+	@mkdir -p $(@D)
+	@$(CC) -o $@ $^ $(LDFLAGS)
 
-$(OBJDIR)/discreteFourierTransform.o: $(SRCDIR)/discreteFourierTransform.c \
-        defs.h externs.h utilities.h
-	$(CC) -o $@ $(GCCFLAGS) $(SRCDIR)/discreteFourierTransform.c
-
-$(OBJDIR)/nonOverlappingTemplateMatchings.o: \
-        $(SRCDIR)/nonOverlappingTemplateMatchings.c defs.h externs.h utilities.h
-	$(CC) -o $@ $(GCCFLAGS) $(SRCDIR)/nonOverlappingTemplateMatchings.c
-
-$(OBJDIR)/overlappingTemplateMatchings.o: \
-        $(SRCDIR)/overlappingTemplateMatchings.c defs.h externs.h utilities.h
-	$(CC) -o $@ $(GCCFLAGS) $(SRCDIR)/overlappingTemplateMatchings.c
-
-$(OBJDIR)/universal.o: $(SRCDIR)/universal.c defs.h externs.h utilities.h
-	$(CC) -o $@ $(GCCFLAGS) $(SRCDIR)/universal.c
-
-$(OBJDIR)/approximateEntropy.o: $(SRCDIR)/approximateEntropy.c defs.h externs.h utilities.h
-	$(CC) -o $@ $(GCCFLAGS) $(SRCDIR)/approximateEntropy.c
-
-$(OBJDIR)/randomExcursions.o: $(SRCDIR)/randomExcursions.c defs.h externs.h
-	$(CC) -o $@ $(GCCFLAGS) $(SRCDIR)/randomExcursions.c
-
-$(OBJDIR)/randomExcursionsVariant.o: $(SRCDIR)/randomExcursionsVariant.c defs.h externs.h
-	$(CC) -o $@ $(GCCFLAGS) $(SRCDIR)/randomExcursionsVariant.c
-
-$(OBJDIR)/serial.o: $(SRCDIR)/serial.c defs.h externs.h
-	$(CC) -o $@ $(GCCFLAGS) $(SRCDIR)/serial.c
-
-$(OBJDIR)/linearComplexity.o: $(SRCDIR)/linearComplexity.c defs.h externs.h
-	$(CC) -o $@ $(GCCFLAGS) $(SRCDIR)/linearComplexity.c
-
-$(OBJDIR)/dfft.o: $(SRCDIR)/dfft.c
-	$(CC) -o $@ $(GCCFLAGS) $(SRCDIR)/dfft.c
-
-$(OBJDIR)/matrix.o: $(SRCDIR)/matrix.c defs.h externs.h utilities.h matrix.h
-	$(CC) -o $@ $(GCCFLAGS) $(SRCDIR)/matrix.c
-
-$(OBJDIR)/genutils.o: $(SRCDIR)/genutils.c config.h genutils.h
-	$(CC) -o $@ $(GCCFLAGS) $(SRCDIR)/genutils.c
-
-$(OBJDIR)/cephes.o: $(SRCDIR)/cephes.c cephes.h
-	$(CC) -o $@ $(GCCFLAGS) $(SRCDIR)/cephes.c
-
-$(OBJDIR)/utilities.o: $(SRCDIR)/utilities.c defs.h externs.h utilities.h config.h
-	$(CC) -o $@ $(GCCFLAGS) $(SRCDIR)/utilities.c
-
-$(OBJDIR)/generators.o: $(SRCDIR)/generators.c defs.h externs.h utilities.h \
-        config.h generators.h
-	$(CC) -o $@ $(GCCFLAGS) $(SRCDIR)/generators.c
+$(OBJDIR)/%.o: $(SRCDIR)/%.c
+	@echo " CC $<"
+	@mkdir -p $(@D)
+	@$(CC) -o $@ -c $< $(CFLAGS) -MMD
 
 clean:
-	rm -f assess $(OBJDIR)/*.o
+	@rm -f $(TARGET) $(OBJ)
 
-rebuild: clean assess
+rebuild: clean $(TARGET)
+
+.PHONY: all clean rebuild
