Disable more compiler-specific warnings
Since this is not our code base, disable warnings that are irrelevant.

Some compilers are more eager than the other, gcc and clang produce
different sets of warnings and have different command-line switches
for them, so we have to check the compiler type.

--- a/tests/soter/nist-sts/makefile
+++ b/tests/soter/nist-sts/makefile
@@ -16,8 +16,16 @@
 
 CC ?= /usr/bin/gcc
 
-CFLAGS  += -Wall -Wno-unused-variable -Wno-unused-but-set-variable
+CFLAGS  += -Wall -Wno-unused
 LDFLAGS += -lm
+
+ifeq (yes,$(shell $(CC) --version | grep -qi clang && echo yes))
+CFLAGS += -Wno-absolute-value
+endif
+
+ifeq (yes,$(shell $(CC) --version | grep -qi gcc && echo yes))
+CFLAGS += -Wno-misleading-indentation
+endif
 
 SRCDIR = src
 OBJDIR = obj
