Whitelist libthemis-src crate files
Remove unnecessary symlinks and whitelist the files which should go into
libthemis-src crate. This ensures that we do not package anything extra.

Unfortunately, it is still impossible to simply symlink the whole repo
as libthemis-src/themis because Cargo is too smart. It sees a Cargo.toml
in the repo root, thinks that this is some internal crate, and refuses
to copy the whole "themis" subdirectory (despite that "include" list
does not include themis/Cargo.toml). Well, maybe some day...

--- a/src/wrappers/themis/rust/libthemis-src/Cargo.toml
+++ b/src/wrappers/themis/rust/libthemis-src/Cargo.toml
@@ -10,6 +10,15 @@ readme = "README.md"
 keywords = ["crypto", "Themis"]
 categories = ["development-tools::build-utils"]
 license = "Apache-2.0"
+include = [
+    "/LICENSE",
+    "/Cargo.toml",
+    "/src/**/*",
+    "/themis/LICENSE",
+    "/themis/Makefile",
+    "/themis/src/soter/**/*",
+    "/themis/src/themis/**/*",
+]
 
 [badges]
 circle-ci = { repository = "cossacklabs/themis", branch = "master" }
