--- a/src/wrappers/themis/rust/libthemis-src/Cargo.toml
+++ b/src/wrappers/themis/rust/libthemis-src/Cargo.toml
@@ -10,6 +10,16 @@ readme = "README.md"
 keywords = ["crypto", "Themis"]
 categories = ["development-tools::build-utils"]
 license = "Apache-2.0"
+include = [
+    "/Cargo.toml",
+    "/LICENSE",
+    "/README.md",
+    "/src/**/*.rs",
+    "/themis/LICENSE",
+    "/themis/Makefile",
+    "/themis/src/soter/**/*",
+    "/themis/src/themis/**/*",
+]
 
 [badges]
 circle-ci = { repository = "cossacklabs/themis", branch = "master" }
