--- a/src/wrappers/themis/rust/Cargo.toml
+++ b/src/wrappers/themis/rust/Cargo.toml
@@ -27,7 +27,7 @@ maintenance = { status = "actively-developed" }
 vendored = ["bindings/vendored"]
 
 [dependencies]
-bindings = { package = "libthemis-sys", path = "libthemis-sys", version = "=0.11.0" }
+bindings = { package = "libthemis-sys", path = "libthemis-sys", version = "0.11.0" }
 zeroize = "0.5.2"
 
 [dev-dependencies]
