--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,8 @@ jobs:
       - image: cossacklabs/android-build:2019.01
     environment:
       GOTHEMIS_IMPORT: github.com/cossacklabs/themis/gothemis
-      CFLAGS: "-DCIRICLE_TEST"
+      # NIST STS tests tend to fail in Docker environment
+      NO_NIST_STS: 1
       WITH_FATAL_WARNINGS: yes
     steps:
       - run: sudo apt-get update && sudo DEBIAN_FRONTEND=noninteractive apt-get -y install libssl-dev python python-setuptools python3 python3-setuptools ruby-dev nodejs npm lcov libc6-dbg rsync software-properties-common pkg-config clang afl
@@ -130,7 +131,8 @@ jobs:
       - image: cossacklabs/android-build:2019.01
     environment:
       GOTHEMIS_IMPORT: github.com/cossacklabs/themis/gothemis
-      CFLAGS: "-DCIRICLE_TEST"
+      # NIST STS tests tend to fail in Docker environment
+      NO_NIST_STS: 1
       WITH_FATAL_WARNINGS: yes
     steps:
       # dependencies
