fixup! Run Emscripten tests on CirleCI
Fix incorrectly populated BASH_ENV value. We should not use relative
paths there as the file is going to be loaded from everywhere.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,7 +104,7 @@ jobs:
             cd $HOME/emsdk
             ./emsdk install latest
             ./emsdk activate latest
-            cat ./emsdk_env.sh >> $BASH_ENV
+            echo 'source "$HOME/emsdk/emsdk_env.sh"' >> $BASH_ENV
             source ./emsdk_env.sh
             emcc --version
 
