fixup! Run Emscripten tests on CirleCI
Actually, don't activate Emscripten environment for all the build.
Do this only for the step where we run Wasm tests.

Activating Emscripten environment adds Clang and LLVM into PATH which
breaks Rust code compilation that relies on its own particular Clang
and LLVM present.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,9 +104,6 @@ jobs:
             cd $HOME/emsdk
             ./emsdk install latest
             ./emsdk activate latest
-            echo 'source "$HOME/emsdk/emsdk_env.sh" > /dev/null' >> $BASH_ENV
-            source ./emsdk_env.sh
-            emcc --version
 
       - checkout
       - run: git submodule update --init
@@ -136,7 +133,7 @@ jobs:
       - run: source /etc/profile.d/rvm.sh && rvm use system && make test_ruby
       - run: make test_go
       - run: make test_rust
-      - run: emmake make test BUILD_PATH=build-wasm
+      - run: source "$HOME/emsdk/emsdk_env.sh"; emmake make test BUILD_PATH=build-wasm
       - run: make fuzz
       - run: $HOME/valgrind/bin/valgrind build/tests/soter_test 2>&1 | grep "ERROR SUMMARY\|definitely lost\|indirectly lost\|possibly lost" | awk '{sum += $4} END {print $0; if ( sum > 0 ) { exit 1 } }'
       - run: $HOME/valgrind/bin/valgrind build/tests/themis_test 2>&1 | grep "ERROR SUMMARY\|definitely lost\|indirectly lost\|possibly lost" | awk '{sum += $4} END {print $0; if ( sum > 0 ) { exit 1 } }'
