--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
       - image: cossacklabs/android-build:2019.01
     steps:
       - checkout
-      - run: git submodule update --init
+      - run: git reset HEAD && git submodule sync && git submodule update --init
       # limit CMake/Ninja build concurrency when building BoringSSL
       # otherwise we hit the 4GB memory limit for the build container
       - run: echo 'set_property(GLOBAL APPEND PROPERTY JOB_POOLS circleci_job_pool=4)' >> third_party/boringssl/src/CMakeLists.txt
@@ -33,7 +33,7 @@ jobs:
     steps:
       - run: sudo apt-get update && sudo DEBIAN_FRONTEND=noninteractive apt-get -y install default-jdk nodejs npm
       - checkout
-      - run: git submodule update --init
+      - run: git reset HEAD && git submodule sync && git submodule update --init
       - run: make fmt_check ENGINE=boringssl
       - run: make fmt_check ENGINE=openssl
 
@@ -80,8 +80,33 @@ jobs:
           paths:
             - ~/valgrind
 
+      # Install Emscripten toolchain for Wasm support
+      # See https://emscripten.org/docs/getting_started/downloads.html
+
+      - restore_cache:
+          keys:
+            - emscripten
+
+      - run:
+          name: Update Emscripten
+          command: |
+            if [ ! -d $HOME/emsdk ]
+            then
+                cd $HOME
+                git clone https://github.com/emscripten-core/emsdk.git
+            fi
+            cd $HOME/emsdk
+            git pull
+
+      - run:
+          name: Install and activate Emscripten
+          command: |
+            cd $HOME/emsdk
+            ./emsdk install latest
+            ./emsdk activate latest
+
       - checkout
-      - run: git submodule update --init
+      - run: git reset HEAD && git submodule sync && git submodule update --init
       - run: make
       - run: make JAVA_HOME=/usr/lib/jvm/default-java themis_jni
       - run: sudo make install
@@ -108,6 +133,7 @@ jobs:
       - run: source /etc/profile.d/rvm.sh && rvm use system && make test_ruby
       - run: make test_go
       - run: make test_rust
+      - run: source "$HOME/emsdk/emsdk_env.sh"; emmake make test BUILD_PATH=build-wasm
       - run: make fuzz
       - run: $HOME/valgrind/bin/valgrind build/tests/soter_test 2>&1 | grep "ERROR SUMMARY\|definitely lost\|indirectly lost\|possibly lost" | awk '{sum += $4} END {print $0; if ( sum > 0 ) { exit 1 } }'
       - run: $HOME/valgrind/bin/valgrind build/tests/themis_test 2>&1 | grep "ERROR SUMMARY\|definitely lost\|indirectly lost\|possibly lost" | awk '{sum += $4} END {print $0; if ( sum > 0 ) { exit 1 } }'
@@ -125,6 +151,14 @@ jobs:
           paths:
             - ~/.cargo
             - ~/.rustup
+
+      - save_cache:
+          key: emscripten
+          paths:
+            - ~/emsdk
+            - ~/.emscripten
+            - ~/.emscripten_cache
+            - ~/.emscripten_cache.lock
 
   integration_tests:
     docker:
