--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,6 +96,7 @@ jobs:
                 git clone https://github.com/emscripten-core/emsdk.git
             fi
             cd $HOME/emsdk
+            git reset --hard
             git pull
 
       - run:
