Workflow for testing JsThemis with multiple Node.js
It turns out that it's not enough to test JsThemis with Node.js
that is bundled with the distribution we use (Ubuntu 16.04 LTS).
This version is quite old and not really supported by Joyent.
We should be testing with the modern version as well. Currently
these are v8 (old LTS), v10 (current LTS), and v12 (next LTS).

Add a dedicated workflow which will build and test JsThemis
across these versions of Node.js. We use the NVM tool to manage
Node.js installations.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -162,6 +162,99 @@ jobs:
             - ~/.emscripten_cache
             - ~/.emscripten_cache.lock
 
+  jsthemis:
+    docker:
+      - image: cossacklabs/android-build:2019.01
+    environment:
+      NO_NIST_STS: 1
+      WITH_FATAL_WARNINGS: yes
+    steps:
+      - run:
+          name: Install Node.js from repositories
+          command: |
+            export DEBIAN_FRONTEND=noninteractive
+            sudo apt-get update
+            # Also pull in some Themis dependencies
+            sudo apt-get -y install libssl-dev nodejs npm
+            # Make sure ancient Node.js available as "node"
+            sudo ln -sf /usr/bin/nodejs /usr/bin/node
+      - run:
+          name: Install Node.js via NVM
+          command: |
+            # Install latest NVM as descrbed in documentation:
+            # https://github.com/nvm-sh/nvm
+            curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.34.0/install.sh | bash
+            # Activate NVM for the current shell and make sure it's activated in next ones
+            # (CircleCI jobs have their 'specifics' in ignoring .bash_profile et al.)
+            echo 'source $HOME/.nvm/nvm.sh' >> $BASH_ENV
+            source $HOME/.nvm/nvm.sh
+            # Install old LTS, current LTS, current stable versions
+            nvm install v8
+            nvm install v10
+            nvm install v12
+      - checkout
+      - run:
+          name: Sync submodules
+          command: git reset HEAD && git submodule sync && git submodule update --init
+      - run:
+          name: Install Themis Core
+          command: |
+            make
+            sudo make install
+            make prepare_tests_all
+      - run:
+          name: Test JsThemis with Node.js from repositories
+          when: always
+          command: |
+            # Activate Node.js from repositories
+            nvm deactivate
+            echo "node --version: $(node --version)"
+            echo "npm --version:  $(npm --version)"
+            # Install JsThemis locally
+            rm -rf node_modules package-lock.json
+            make jsthemis_install
+            # Run JsThemis tests
+            make test_js
+      - run:
+          name: Test JsThemis with Node.js v8 (maintenance)
+          when: always
+          command: |
+            # Activate Node.js v8
+            nvm use v8
+            echo "node --version: $(node --version)"
+            echo "npm --version:  $(npm --version)"
+            # Install JsThemis locally
+            rm -rf node_modules package-lock.json
+            make jsthemis_install
+            # Run JsThemis tests
+            make test_js
+      - run:
+          name: Test JsThemis with Node.js v10 (LTS)
+          when: always
+          command: |
+            # Activate Node.js v10
+            nvm use v10
+            echo "node --version: $(node --version)"
+            echo "npm --version:  $(npm --version)"
+            # Install JsThemis locally
+            rm -rf node_modules package-lock.json
+            make jsthemis_install
+            # Run JsThemis tests
+            make test_js
+      - run:
+          name: Test JsThemis with Node.js v12 (stable)
+          when: always
+          command: |
+            # Activate Node.js v12
+            nvm use v12
+            echo "node --version: $(node --version)"
+            echo "npm --version:  $(npm --version)"
+            # Install JsThemis locally
+            rm -rf node_modules package-lock.json
+            make jsthemis_install
+            # Run JsThemis tests
+            make test_js
+
   integration_tests:
     docker:
       - image: cossacklabs/android-build:2019.01
@@ -250,6 +343,7 @@ workflows:
       # Broken build temporarily disabled (see T1133, 2019-07-03)
       # - android
       - x86_64
+      - jsthemis
       - php5
       - php70
       - php71
