--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -118,7 +118,7 @@ jobs:
       - run: sudo make install
       - run: sudo make themispp_install
       - run: sudo make pythemis_install
-      - run: sudo make rubythemis_install
+      - run: sudo make rbthemis_install
       - run: sudo make jsthemis_install
       - run: make ENGINE=boringssl BUILD_PATH=build_with_boringssl prepare_tests_basic
       - run: make BUILD_PATH=cover_build COVERAGE=y prepare_tests_basic
@@ -200,7 +200,7 @@ jobs:
       - run: sudo make install
       - run: sudo make themispp_install
       - run: sudo make pythemis_install
-      - run: sudo make rubythemis_install
+      - run: sudo make rbthemis_install
       - run: sudo make phpthemis_install
       - run: sudo bash -c 'echo "extension=phpthemis.so" > /etc/php/7.0/cli/conf.d/20-phpthemis.ini'
       - run: sudo make jsthemis_install
