--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,6 +55,8 @@ jobs:
       - run:
           name: Install RVM
           command: |
+            # Import keys used by RVM maintainers from recommended key server pools
+            # See https://rvm.io/rvm/security
             for key in 409B6B1796C275462A1703113804BB82D39DC0E3 \
                        7D2BAF1CF37B13E2069D6956105BD0E739499BDB
             do
@@ -194,6 +196,8 @@ jobs:
       - run:
           name: Install RVM
           command: |
+            # Import keys used by RVM maintainers from recommended key server pools
+            # See https://rvm.io/rvm/security
             for key in 409B6B1796C275462A1703113804BB82D39DC0E3 \
                        7D2BAF1CF37B13E2069D6956105BD0E739499BDB
             do
