Use libdir and includedir in pkg-config
Update pkg-config templates to use actual "libdir" and "includedir"
variables. Currently we expect them to be hardcoded and depend only
on the prefix, but that's not the case right now. Use the values
used by Makefile when installing. Now pkg-config files will have
correct paths when building multiarch packages.

--- a/src/soter/libsoter.pc.in
+++ b/src/soter/libsoter.pc.in
@@ -1,7 +1,5 @@
-prefix=%prefix%
-exec_prefix=${prefix}
-includedir=${prefix}/include
-libdir=${exec_prefix}/lib
+includedir=%includedir%
+libdir=%libdir%
 
 Name: Soter
 Description: Cryptographic primitives for Themis
