--- a/src/themis/libthemis.pc.in
+++ b/src/themis/libthemis.pc.in
@@ -1,7 +1,5 @@
-prefix=%prefix%
-exec_prefix=${prefix}
-includedir=${prefix}/include
-libdir=${exec_prefix}/lib
+includedir=%includedir%
+libdir=%libdir%
 
 Name: Themis
 Description: High-level cryptographic services
