--- a/src/wrappers/themis/wasm/package.json
+++ b/src/wrappers/themis/wasm/package.json
@@ -1,7 +1,6 @@
 {
   "name": "wasm-themis",
   "version": "0.11.1",
-  "private": true,
   "description": "Themis data security library",
   "main": "src/index.js",
   "scripts": {
@@ -22,7 +21,7 @@
   "bugs": {
     "url": "https://github.com/cossacklabs/themis/issues"
   },
-  "homepage": "https://github.com/cossacklabs/themis#readme",
+  "homepage": "https://www.cossacklabs.com/themis/",
   "devDependencies": {
     "mocha": "^6.1.4"
   }
