--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "third_party/boringssl/src"]
 	path = third_party/boringssl/src
-	url = https://github.com/cossacklabs/boringssl
+	url = https://boringssl.googlesource.com/boringssl
